[package]
name = "rust_emptybin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanomsg = "0.7.2"
hex = "0.4"
serde = { version = "1.0.147", features = ["derive"] }
bincode = "1.3.3"
rustc-hex = "2.1.0"
serde-big-array = "0.4.1"
serde_json = "1.0"
chain = { git = "https://github.com/alrighttt/atomicDEX-API",  branch = "kp-dev"}
serialization = { git = "https://github.com/alrighttt/atomicDEX-API",  branch = "kp-dev"}
rusqlite = "0.29.0"